--- a/modules/projects/client/views/project-partials/project.decision.html
+++ b/modules/projects/client/views/project-partials/project.decision.html
@@ -1,43 +1,72 @@
 <h1 class="page-title ng-binding ng-scope">
 Decison Package for {{ project.name }}
 </h1>
-<div class="text-right ng-scope">
-	<a class="btn btn-link btn-xs" ui-sref="p.detail" href="/p/cc-project/detail">Cancel</a>
-</div>
-
+<h4>Decision Package Documents</h4>
 <div class="panel panel-default ng-scope">
 	<div class="panel-body no-vertical-padding ng-scope">
-		<div class="row block-section">
-			<div class="col-sm-2 col-no-padding col-border-right">
-				<ul class="small list-unstyled list-documents">
-					<li class="row-folder clickable ng-scope" >
-						<a href="#qw" x-offset="10"  class="ng-binding">Recommendations of the ADM</a>
-					</li>
-					<li class="row-folder clickable ng-scope" >
-						<a href="#we" x-offset="10"  class="ng-binding">Project Assessment Report</a>
-					</li>
-					<li class="row-folder clickable ng-scope" >
-						<a href="#er" x-offset="10"  class="ng-binding">Draft Certificate</a>
-					</li>
-					<li class="row-folder clickable ng-scope" >
-						<a href="#rt" x-offset="10"  class="ng-binding">Table of Conditions (Schedule A)</a>
-					</li>
-					<li class="row-folder clickable ng-scope" >
-						<a href="#ty" x-offset="10"  class="ng-binding">Project Description (Schedule B)</a>
-					</li>
-					<li class="row-folder clickable ng-scope" >
-						<a href="#yu" x-offset="10"  class="ng-binding">Application Package</a>
-					</li>
-				</ul>
 
-			</div>
-			<div class="col-sm-10 ">
-			</div>
-		</div>
+				<div class="thumbnails document-icon-list">
+				<div class="thumbnail pull-left">
+					<div class="caption text-center">
+						<a href>
+							<span class="glyphicon glyphicon-file"></span>
+							<br>
+							<small>Recommendations of the ADM</small>
+						</a>
+					</div>
+					</div><div class="thumbnail pull-left">
+					<div class="caption text-center">
+						<a href>
+							<span class="glyphicon glyphicon-file"></span>
+							<br>
+							<small>Project Assessment Report</small>
+						</a>
+					</div>
+					</div><div class="thumbnail pull-left">
+					<div class="caption text-center">
+						<a href>
+							<span class="glyphicon glyphicon-file"></span>
+							<br>
+							<small>Draft Certificate</small>
+						</a>
+					</div>
+					</div><div class="thumbnail pull-left">
+					<div class="caption text-center">
+						<a href>
+							<span class="glyphicon glyphicon-file"></span>
+							<br>
+							<small>Table of Conditions (Schedule A)</small>
+						</a>
+					</div>
+					</div><div class="thumbnail pull-left">
+					<div class="caption text-center">
+						<a href>
+							<span class="glyphicon glyphicon-file"></span>
+							<br>
+							<small>Project Description (Schedule B)</small>
+						</a>
+					</div>
+					</div><div class="thumbnail pull-left">
+					<div class="caption text-center">
+						<a href>
+							<span class="glyphicon glyphicon-file"></span>
+							<br>
+							<small>Application Package</small>
+						</a>
+					</div>
+				</div>
+				</div>
+
 	</div>
+
 </div>
 
 
+<h4>Minister's Decision</h4>
+<div class="text-right ng-scope">
+	<a class="btn btn-link btn-xs" ui-sref="p.detail">Cancel</a>
+	<a class="btn btn-link btn-xs" ui-sref="p.detail">Save</a>
+</div>
 
 <div class="panel panel-default ng-scope">
 	<div class="panel-body no-vertical-padding ng-scope" du-scroll-container="templateContainer">
@@ -306,3 +335,24 @@ Signed this 26th day of October, 2015
 		</div>
 	</div>
 </div>
+
+
+
+<div class="panel panel-default">
+	<div class="panel-body">
+
+		<h4>Approval / Rejection Note</h4>
+		<div class="form-group">
+			<textarea rows="10" class="form-control" ng-model="artifact.approvalnote"></textarea>
+		</div>
+		<div class="text-right">
+			<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
+			<a class="btn btn-default" ui-sref="p.detail">Save</a>
+			<a class="btn btn-danger" ui-sref="p.detail">Reject</a>
+			<a class="btn btn-default" ui-sref="p.detail">Return for Revisions</a>
+			<a class="btn btn-success" ui-sref="p.detail">Approve for Certification</a>
+		</div>
+	</div>
+</div>
+
+
