Stubbing in modal for topics

--- a/modules/topics/client/views/topic-modal-select.html
+++ b/modules/topics/client/views/topic-modal-select.html
@@ -24,8 +24,8 @@
 
 	<div class="modal-footer">
 		<div>
-			<button class="btn btn-default" href ng-click="">Cancel</button>
-			<button class="btn btn-default" href ng-click="">Ok</button>
+			<button class="btn btn-default" href ng-click="self.cancel()">Cancel</button>
+			<button class="btn btn-default" href ng-click="self.ok()">Ok</button>
 		</div>
 	</div>
 	
