--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -5,7 +5,7 @@
 <div class="button-bar row">
 	<div class="col-sm-12 clearfix">
 		<div class="pull-left">
-			<button class="btn btn-default btn-sm" ui-sref="p.vc.list()">
+			<button class="btn btn-default btn-sm" ui-sref="p.vc.create()">
                 <span class="glyphicon glyphicon-plus"></span><span>Add Value Component</span></button>
 			<button class="btn btn-default btn-sm" ui-sref="p.vc.list" ng-click="openAddTopic()">
                 <span class="glyphicon glyphicon-plus"></span><span>Add Topics</span>
