Pass topic data to modal

--- a/modules/topics/client/views/topic-modal-select.html
+++ b/modules/topics/client/views/topic-modal-select.html
@@ -4,7 +4,7 @@
 	<div class="modal-header">
 		<h3 class="modal-title">Add Topic(s)</h3>
 	</div>
-
+SELF: {{self.data}}
 	<div class="modal-body">
 		<section class="panel panel-default">
 			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover table-striped">
