--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -1,7 +1,7 @@
 <h1 class="page-title no-lower-margin">{{ project.name }}</h1>
 
-<div class="row">
-	<div class="col-sm-12 text-right">
+<div class="row" ng-if="environment === 'EAO' && authentication.user">
+	<div class="col-sm-12 text-right btn-link-separated-list">
 		<a class="btn btn-xs btn-link"
 			ng-click="completePhase()"
 			ng-if="!project.currentPhase.completed">Complete Current Phase</a>
@@ -10,9 +10,11 @@
 			ng-click="startNextPhase()"
 			ng-if="project.currentPhase.completed">Start Next Phase</a>
 
+		<small ng-if="!project.isPublished"> / </small>
+
 		<a class="btn btn-xs btn-link"
 			ng-click="publishProject()"
-			ng-if="!project.isPublished"> | Publish Project</a>
+			ng-if="!project.isPublished">Publish Project</a>
 	</div>
 </div>
 
