--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1501,7 +1501,8 @@ table thead tr.ng-table-filters {
 	position: relative;
 	padding: 10px 0;
 	display: block;
-	background-color: rgba(0,0,0,0.15);
+	background-color: rgba(0,0,0,0.30);
+	text-shadow: 0 0 20px #000000;
 	color: #ffffff;
 	text-align: center;
 	left: 0;
