--- a/modules/projects/client/views/project-partials/project.decision.html
+++ b/modules/projects/client/views/project-partials/project.decision.html
@@ -2,67 +2,60 @@
 Decison Package for {{ project.name }}
 </h1>
 <h4>Decision Package Documents</h4>
-<div class="panel panel-default ng-scope">
-	<div class="panel-body no-vertical-padding ng-scope">
-
-				<div class="thumbnails document-icon-list">
-				<div class="thumbnail pull-left">
-					<div class="caption text-center">
-						<a href>
-							<span class="glyphicon glyphicon-file"></span>
-							<br>
-							<small>Recommendations of the ADM</small>
-						</a>
-					</div>
-					</div><div class="thumbnail pull-left">
-					<div class="caption text-center">
-						<a href>
-							<span class="glyphicon glyphicon-file"></span>
-							<br>
-							<small>Project Assessment Report</small>
-						</a>
-					</div>
-					</div><div class="thumbnail pull-left">
-					<div class="caption text-center">
-						<a href>
-							<span class="glyphicon glyphicon-file"></span>
-							<br>
-							<small>Draft Certificate</small>
-						</a>
-					</div>
-					</div><div class="thumbnail pull-left">
-					<div class="caption text-center">
-						<a href>
-							<span class="glyphicon glyphicon-file"></span>
-							<br>
-							<small>Table of Conditions (Schedule A)</small>
-						</a>
-					</div>
-					</div><div class="thumbnail pull-left">
-					<div class="caption text-center">
-						<a href>
-							<span class="glyphicon glyphicon-file"></span>
-							<br>
-							<small>Project Description (Schedule B)</small>
-						</a>
-					</div>
-					</div><div class="thumbnail pull-left">
-					<div class="caption text-center">
-						<a href>
-							<span class="glyphicon glyphicon-file"></span>
-							<br>
-							<small>Application Package</small>
-						</a>
-					</div>
-				</div>
-				</div>
-
+<div class="thumbnails document-icon-list clearfix">
+	<div class="thumbnail pull-left">
+		<div class="caption text-center">
+			<a href>
+				<span class="glyphicon glyphicon-file"></span>
+				<br>
+				<small>Recommendations of the ADM</small>
+			</a>
+		</div>
+		</div><div class="thumbnail pull-left">
+		<div class="caption text-center">
+			<a href>
+				<span class="glyphicon glyphicon-file"></span>
+				<br>
+				<small>Project Assessment Report</small>
+			</a>
+		</div>
+		</div><div class="thumbnail pull-left">
+		<div class="caption text-center">
+			<a href>
+				<span class="glyphicon glyphicon-file"></span>
+				<br>
+				<small>Draft Certificate</small>
+			</a>
+		</div>
+		</div><div class="thumbnail pull-left">
+		<div class="caption text-center">
+			<a href>
+				<span class="glyphicon glyphicon-file"></span>
+				<br>
+				<small>Table of Conditions (Schedule A)</small>
+			</a>
+		</div>
+		</div><div class="thumbnail pull-left">
+		<div class="caption text-center">
+			<a href>
+				<span class="glyphicon glyphicon-file"></span>
+				<br>
+				<small>Project Description (Schedule B)</small>
+			</a>
+		</div>
+		</div><div class="thumbnail pull-left">
+		<div class="caption text-center">
+			<a href>
+				<span class="glyphicon glyphicon-file"></span>
+				<br>
+				<small>Application Package</small>
+			</a>
+		</div>
 	</div>
-
 </div>
 
 
-<h4>Minister's Decision</h4>
+<h4 class="no-lower-margin">Minister's Decision</h4>
 <div class="text-right ng-scope">
 	<a class="btn btn-link btn-xs" ui-sref="p.detail">Cancel</a>
 	<a class="btn btn-link btn-xs" ui-sref="p.detail">Save</a>
