--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -32,7 +32,7 @@
 					</p>
 				</div>
 
-				<div class="form-group" ng-if="(vm.project.dateCommentsOpen | isInThePast) && (vm.project.dateCommentsClosed | isInTheFuture)">
+				<div class="form-group" ng-if="(vm.project.dateCommentsOpen | isInThePast) && ((vm.project.dateCommentsClosed | isInTheFuture) || vm.isLoggedInUser)">
 					<a class="btn btn-block btn-success wrap btn-md" href x-modal-add-public-comment x-project="vm.project">Click here to Comment on the Application</a>
 				</div>
 			</div>
