--- a/modules/core/client/views/admin.abstract.html
+++ b/modules/core/client/views/admin.abstract.html
@@ -1,4 +1,4 @@
 <section class="row">
-	<ui-view class='col-sm-10 tr-slide' id="main-content-section"></ui-view>
+	<ui-view class='col-sm-10 tr-slide' id="main-content-section">DERPPPP</ui-view>
 	<div class='col-sm-2 tr-slide' id="main-side-section"></div>
 </section>
