--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -1,7 +1,7 @@
-<h1 class="page-title"
-	ng-class="{'no-lower-margin': (environment === 'EAO' && authentication.user && project.isPublished)}">{{ project.name }}</h1>
+<!-- Hiding this until we figure out the final structure -->
+<h1 class="page-title hidden" ng-class="{'no-lower-margin': (environment === 'EAO' && authentication.user && project.isPublished)}">{{ project.name }} DERPP</h1>
 
-<div class="row" ng-if="environment === 'EAO' && authentication.user">
+<div class="row hidden" ng-if="environment === 'EAO' && authentication.user">
 	<div class="col-sm-12 text-right btn-link-separated-list">
 		<a class="btn btn-xs btn-link"
 			ng-click="completePhase()"
@@ -19,9 +19,10 @@
 	</div>
 </div>
 
+<h2>Project Details</h2>
 
 <section class="panel panel-default">
-
+    
 	<tmpl-project-tombstone
 		class="anchor-section"
 		id="anchor-tombstone"
