on the way to document uploading within artifacts, fixed css issue

--- a/modules/documents/client/views/partials/document-link.html
+++ b/modules/documents/client/views/partials/document-link.html
@@ -1,7 +1,7 @@
 <tmpl-documents-browser
 	x-approvals="false"
 	x-project="docLink.project"
-	x-allow-links='true'>
+	x-allow-link='true'>
 </tmpl-documents-browser>
 
 <div class="container-fluid">
