--- a/modules/projects/client/views/project-partials/project.decision.html
+++ b/modules/projects/client/views/project-partials/project.decision.html
@@ -11,7 +11,8 @@ Decison Package for {{ project.name }}
 				<small>Recommendations of the ADM</small>
 			</a>
 		</div>
-		</div><div class="thumbnail pull-left">
+	</div>
+	<div class="thumbnail pull-left">
 		<div class="caption text-center">
 			<a href>
 				<span class="glyphicon glyphicon-file"></span>
