--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -244,7 +244,7 @@ h3 .small {
 h3 .small .label {
 	font-weight: 500;
 }
- 
+
 
  .col-0 {
  	width: 0;
@@ -1506,7 +1506,7 @@ table thead tr.ng-table-filters {
 	color: #ffffff;
 	text-align: center;
 	left: 0;
-	right: 0;	
+	right: 0;
 }
 .show-news:hover,
 .show-news:active,
@@ -1519,7 +1519,7 @@ table thead tr.ng-table-filters {
 	position: absolute;
 	bottom: 0;
 	left: 15px;
-	right: 15px;	
+	right: 15px;
 }
 
 div.dropdown-menu {
@@ -1534,7 +1534,7 @@ div.dropdown-menu {
     padding-bottom: 1.5rem;
 }
 
-/* BUTTONS 
+/* BUTTONS
 ------------------------------ */
 .btn {
     .glyphicon + span {
@@ -1546,11 +1546,9 @@ div.dropdown-menu {
 /* PAGE LAYOUT
 ------------------------------ */
 .view-title-container {
-    padding-top: 1.5rem;
-    padding-right: 1.5rem;
+    padding: 1.5rem;
     padding-bottom: 1rem;
-    padding-left: 1.5rem;
-    
+
     h1 {
         margin: 0;
         padding: 0;
@@ -1576,20 +1574,20 @@ div.dropdown-menu {
     display: -webkit-flex; /* Safari */
     display: flex;
     flex-flow: row nowrap;
-    
+
     .left-panel {
         flex: 0 0 20rem;
     }
-    
+
     .main-panel {
         flex: 1 1 auto;
     }
-    
+
     .right-panel {
         flex: 0 0 35rem;
         overflow-x: hidden;
     }
-    
+
     .left-panel,
     .main-panel,
     .right-panel {
@@ -1602,7 +1600,7 @@ div.dropdown-menu {
 ------------------------------ */
 .projects-table {
     table-layout: fixed;
-    
+
     td {
         width: 25%;
     }
@@ -1611,12 +1609,12 @@ div.dropdown-menu {
 /* ACTIVITIES LIST
 ------------------------------ */
 .activities-container {
-    .nav-tabs {        
+    .nav-tabs {
         > li {
             width: 33.3333%;
             padding: 0;
             background: #EEE;
-            
+
             > a {
                 margin: 0;
                 padding-left: 0.5rem;
@@ -1628,21 +1626,21 @@ div.dropdown-menu {
                 border-radius: 0;
             }
         }
-        
+
         > li:first-child > a {
             border-top-left-radius: 6px;
         }
-        
+
         > li:last-child > a {
             border-top-right-radius: 6px;
         }
-        
+
         > li.active {
             > a,
             > a:hover,
             > a:focus {
                 border: none;
-            }  
+            }
         }
     }
 }
@@ -1651,25 +1649,25 @@ div.dropdown-menu {
     margin: 0;
     padding: 0;
     list-style-type: none;
-    
+
     li {
         padding: 1.5rem;
         border-bottom: 1px solid #CCC;
     }
-    
+
     li:last-child {
         border-bottom: none;
     }
-    
+
     h3 {
         margin-top: 0;
         margin-bottom: 1rem;
         font-size: 1.6rem;
     }
-    
+
     .activity-info {
         margin-bottom: 1.25rem;
-        
+
         small {
             display: block;
             margin-bottom: 0.25rem;
