--- a/modules/templates/client/views/template-html-editor.html
+++ b/modules/templates/client/views/template-html-editor.html
@@ -11,7 +11,7 @@
 			type="text"
 			class="form-control input-sm text-editor"
 			ng-model="curVal" rows=10
-			ng-blur="saveModel()">
+			ng-blur="activeItem = false">
 		</textarea>
 		<div class="text-right">
 			<a class="btn btn-sm btn-link" href ng-click="activeItem = false">Close</a>
