--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1575,23 +1575,25 @@ div.dropdown-menu {
     display: flex;
     flex-flow: row nowrap;
 
-    .left-panel {
-        flex: 0 0 20rem;
-    }
-
-    .main-panel {
-        flex: 1 1 auto;
-    }
-
-    .right-panel {
-        flex: 0 0 35rem;
-        overflow-x: hidden;
-    }
-
     .left-panel,
     .main-panel,
     .right-panel {
         padding: 1.5rem;
+    }
+
+    .left-panel {
+        flex: 0 0 18rem;
+    }
+
+    .main-panel {
+        padding-left: 0;
+        flex: 1 1 auto;
+    }
+
+    .right-panel {
+        padding-left: 0;
+        flex: 0 0 30rem;
+        overflow-x: hidden;
     }
 }
 
@@ -1600,11 +1602,13 @@ div.dropdown-menu {
 ------------------------------ */
 .projects-table {
     table-layout: fixed;
-
-    td {
-        width: 25%;
+ 
+    th:last-child {
+        width: 10rem;
+        text-align: right;
     }
 }
+
 
 /* ACTIVITIES LIST
 ------------------------------ */
